# cyberstore

./: .gitignore  LICENSE  Makefile  README.md  cyberstore.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
cyberstore/: __init__.py  __main__.py  app.py  config.py  oss_client.py  r2_client.py  utils.py
cyberstore/screens/: __init__.py  bucket_create_screen.py  delete_confirm.py  download_screen.py  folder_create_screen.py  link_screen.py  main_screen.py  object_info_screen.py  setup_screen.py  upload_screen.py
cyberstore/styles/: app.tcss  modals.tcss
cyberstore/widgets/: __init__.py  breadcrumb.py  bucket_tree.py  object_table.py  search_bar.py  status_bar.py
scripts/: install.sh
tests/: test_oss_client.py  test_r2_client.py
